@@ -1,5 +1,15 @@
 2016-01-30  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/unix/sysv/linux/alpha/Makefile (sysdep_routines): Add
+	osf_select.
+	* sysdeps/unix/sysv/linux/alpha/select.c: New file.
+	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Remove select and
+	osf_select from auto-generation list.
+	* sysdeps/unix/sysv/linux/syscalls.list: Likewise.
+	* sysdeps/unix/sysv/linux/sparc/sparc64/syscalls.list: Likewise.
+	* sysdeps/unix/sysv/linux/generic/select.c: Remove file.
+	* sysdeps/unix/sysv/linux/select.c: New file.
+
 	* sysdeps/unix/sysv/linux/generic/poll.c: Remove file.
 	* sysdeps/unix/sysv/linux/poll.c: New file.
 	* sysdeps/unix/sysv/linux/syscalls.list: Remove poll from
